--- a/src/blocks/profile/__avatar-box/profile__avatar-box.css
+++ b/src/blocks/profile/__avatar-box/profile__avatar-box.css
@@ -11,3 +11,9 @@
 .profile__avatar-box:hover .profile__avatar-edit {
   opacity: 1;
 }
+
+@media screen and (max-width: 675px) {
+  .profile__avatar-box {
+    grid-area: ava;
+  }
+}
