--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@
 @import url(./blocks/cards/cards.css);
 @import url(./blocks/card/card.css);
 @import url(./blocks/card/__delete-button/card__delete-button.css);
+@import url(./blocks/card/__delete-button/card__delete-button_hidden.css);
 @import url(./blocks/card/__image/card__image.css);
 @import url(./blocks/card/__box/card__box.css);
 @import url(./blocks/card/__name/card__name.css);
