add spiner & fixes

--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,4 @@
 @import url(./blocks/card/__like-counter/card__like-counter.css);
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__copyright/footer__copyright.css);
+@import url(./blocks/loding/loading.css);
