--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,5 +1,8 @@
-.page{
-    background-color: black;
-    margin: 0;
-    padding: 0;
+html {
+  background-color: black;
+}
+.page {
+  background-color: black;
+  margin: 0;
+  padding: 0;
 }
