--- a/src/blocks/loding/loading.css
+++ b/src/blocks/loding/loading.css
@@ -2,4 +2,10 @@
   display: flex;
   justify-content: center;
   background-color: black;
+  color: aqua;
+}
+
+.loading__text {
+  color: aqua;
+  text-align: center;
 }
